style: fix checkstyle issues and rename ProductDto